--- a/agenda11022020.md
+++ b/agenda11022020.md
@@ -13,9 +13,9 @@ Vidconf date and time: 11 February 2020, 8am PDT / 11am EDT / 4pm GMT / 5pm CET 
 
 It's now 2020. By 2040, only twenty years away, the earth's atmosphere will have reached&ndash;the already baked in&ndash;1.5&deg;C temperature increase. (IPCC 2018)
 
-One of the few tools that we have for preventing further increases in global warming is human knowledge&mdash;research.  The idea that this is not in free circulation because of profit, self-interest, or complacency must change now.
+One of the few tools that we have for preventing further increases in global warming is human knowledge&mdash;research.  The idea that this knowledge is not in free circulation and behind paywalls for reasons of profit, self-interest, or complacency must change now.
 
-Time is of the essence and every year counts. OCK's mission is  'action now' for open research. We are using Peter Murray-Rust's data mining software 'OpenNotebook' to analyse different areas of publishing and Open Science to make plans for this speedy transition and for a new type of Open Science publishing.
+Time is of the essence and every year counts. OCK's mission is 'action now' for open research. We are using Peter Murray-Rust's data mining software 'OpenNotebook' to analyse different areas of publishing and Open Science to make plans for this speedy transition and for the imlementaion of a new type of 'Open Science Publishing'&mdash; with all parts of the research cycle open and semantically connected.
 
 **Invitation to join the OCK Force11 working group or contribute to the efforts in other ways.**
 
