--- a/agenda11022020.md
+++ b/agenda11022020.md
@@ -11,7 +11,7 @@ Vidconf date and time: 11 February 2020, 8am PDT / 11am EDT / 4pm GMT / 5pm CET 
 
 ---
 
-It's now 2020. By 2040, only twenty years away, the earth's atmosphere will have reached&ndash;the already baked in&ndash;1.5&deg;C temperature increase. (IPCC 2018)
+It's now 2020. By 2040, only twenty years away, the earth's atmosphere will have reached&ndash;the already baked in&ndash;1.5&deg;C temperature increase. ([IPCC 2018](https://www.ipcc.ch/sr15/))
 
 One of the few tools that we have for preventing further increases in global warming is human knowledge&mdash;research.  The idea that this knowledge is not in free circulation and behind paywalls for reasons of profit, self-interest, or complacency must change now.
 
