--- a/agenda11022020.md
+++ b/agenda11022020.md
@@ -31,6 +31,8 @@ Working group (WG) links: Force 11 &ndash;  https://www.force11.org/group/open-c
 
 NB: add your name to minutes and contribute any notes https://cryptpad.fr/pad/#/2/pad/edit/t5z-3EJz2RzMkKcCg+zDYtL+/
 
+Demos: https://github.com/OCKProject/Force11-OCKWG/tree/master/demos
+
 Working group leaders: Peter Murray-Rust and Simon Worthington.
 
  1. Introduction and overview of agenda - personal intros if numbers allow - SW/PMR 5/10 mins.
