--- a/agenda11022020.md
+++ b/agenda11022020.md
@@ -36,7 +36,7 @@ Demos: https://github.com/OCKProject/Force11-OCKWG/tree/master/demos
 Working group leaders: Peter Murray-Rust and Simon Worthington.
 
  1. Introduction and overview of agenda - personal intros if numbers allow - SW/PMR 5/10 mins.
- 1. Demo - Data mining using preprints archive - PMR 20 mins.
+ 1. Demo - Data mining using preprints archive - PMR 20 mins. [Demo results](../demos/DEMOS.md)
  1. Planless/Planlos? intro to developing a plan for 100% open - SW/PMR 10 mins.
  1. The Force11 working group (WG) - SW 5 mins.
  1. Open to the floor - Your help & joining the WG - 15 mins.
