--- a/agenda11022020.md
+++ b/agenda11022020.md
@@ -31,12 +31,12 @@ Working group (WG) links: Force 11 &ndash;  https://www.force11.org/group/open-c
 
 NB: add your name to minutes and contribute any notes https://cryptpad.fr/pad/#/2/pad/edit/t5z-3EJz2RzMkKcCg+zDYtL+/
 
-Demos: https://github.com/OCKProject/Force11-OCKWG/tree/master/demos
+Demos: https://github.com/OCKProject/Force11-OCKWG/tree/master/demos [Docs](../master/demos/DEMOS.md)
 
 Working group leaders: Peter Murray-Rust and Simon Worthington.
 
  1. Introduction and overview of agenda - personal intros if numbers allow - SW/PMR 5/10 mins.
- 1. Demo - Data mining using preprints archive - PMR 20 mins. [Demo results](../demos/DEMOS.md)
+ 1. Demo - Data mining using preprints archive - PMR 20 mins. 
  1. Planless/Planlos? intro to developing a plan for 100% open - SW/PMR 10 mins.
  1. The Force11 working group (WG) - SW 5 mins.
  1. Open to the floor - Your help & joining the WG - 15 mins.
